--- a/src/style/list.scss
+++ b/src/style/list.scss
@@ -36,6 +36,11 @@ ul {
   list-style: none;
 }
 
+.note-list {
+  width: 100%;
+  height: 100%;
+}
+
 .page-top {
   width: 100%;
   height: 40px;
@@ -44,6 +49,7 @@ ul {
 
 .page-content {
   width: 50%;
+  text-align: center;
   margin: 0px auto;
 }
 
@@ -55,16 +61,11 @@ ul {
 
 .main {
   width: 100%;
+  height: 100%;
+  overflow: auto;
   padding: 0 30px;
   margin: 0px auto;
   box-sizing:border-box;
-}
-
-.task-input {
-  width: 99%;
-  height:30px;
-  outline: 0;
-  border: 1px solid #ccc;
 }
 
 .task-count{
@@ -87,7 +88,6 @@ ul {
   display: flex;
 }
 .action a {
-  margin: 0px 10px;
   flex: 1;
   padding: 5px 0;
   color: #777;
@@ -116,6 +116,28 @@ ul {
   color: #222;
 }
 
+.task-add {
+  width: 100%;
+  display: flex;
+  .task-add-input {
+    flex: 1;
+    height:30px;
+    outline: 0;
+    padding: 0 10px;
+    border: 1px solid #ccc;
+  }
+  .task-add-btn {
+    width: 100px;
+    border: 1px solid #ccc;
+    border-left: 0;
+  }
+}
+
+.task-content {
+  .task-content-tips {
+    padding: 10px 0;
+  }
+}
 
 .todo-list {
   margin: 0;
@@ -148,6 +170,9 @@ ul {
   border: 1px solid #CCC;
 }
 
+.todo-list li .view {
+  height: 49px;
+}
 .todo-list li.editing .view {
   display: none;
 }
@@ -180,13 +205,13 @@ ul {
   //appearance: none;
 }
 
-.toggle:after {
-  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="40" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
-}
-
-.toggle:checked:after {
-  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="40" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
-}
+//.toggle:after {
+//  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="40" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
+//}
+//
+//.toggle:checked:after {
+//  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="40" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
+//}
 
 .todo-list li label {
   white-space: pre-line;
@@ -217,7 +242,8 @@ ul {
 }*/
 
 .todo-list li .destroy {
-  display: none;
+  color: #af5b5e;
+  display: block;
   position: absolute;
   top: 0;
   right: 10px;
@@ -227,21 +253,20 @@ ul {
   margin: auto 0;
   font-size: 30px;
   color: #cc9a9a;
-  margin-bottom: 11px;
   transition: color 0.2s ease-out;
 }
 
-.todo-list li .destroy:hover {
-  color: #af5b5e;
-}
+//.todo-list li .destroy:hover {
+//  color: #af5b5e;
+//}
 
 .todo-list li .destroy:after {
   content: '×';
 }
 
-.todo-list li:hover .destroy {
-  display: block;
-}
+//.todo-list li:hover .destroy {
+//  display: block;
+//}
 
 .todo-list li .edit {
   display: none;
