--- a/src/style/note.scss
+++ b/src/style/note.scss
@@ -2,11 +2,11 @@
   width: 100%;
   height: 100%;
 
-  .page-top {
+  .note-header {
     width: 100%;
     height: 40px;
     background-color: #db4c3f;
-    .page-content {
+    .header-title {
       width: 50%;
       text-align: center;
       margin: 0px auto;
@@ -18,14 +18,14 @@
     }
   }
 
-  .main {
+  .note-main {
     height: 100%;
     overflow: auto;
     padding: 0 30px;
     margin: 0px auto;
     box-sizing:border-box;
     .note-content {
-      .action {
+      .note-action {
         text-align: center;
         display: flex;
         a {
@@ -41,7 +41,7 @@
         }
       }
     }
-    .txt-title {
+    .main-title {
       color: #222;
     }
     .note-add {
@@ -87,7 +87,7 @@
           &.editing {
             border-bottom: none;
             padding: 0;
-            .view {
+            .todo-view {
               display: none;
             }
             .edit {
@@ -125,7 +125,7 @@
               content: '×';
             }
           }
-          .view {
+          .todo-view  {
             min-height: 49px;
           }
           label {
@@ -149,6 +149,27 @@
           }
         }
       }
+    }
+  }
+  .note-editor{
+    width: 100%;
+    height: 100%;
+    position:fixed;
+    top: 0;
+    background: #FFFFFF;
+    .note-editor-header {
+      width: 100%;
+      padding: 20px 20px 10px 20px;
+      .note-back {
+        width: 100px;
+        height: 32px;
+        cursor: pointer;
+        background: url("../assets/back.png") no-repeat;
+        background-size: 20px;
+      }
+    }
+    .quill-editor {
+      height: 500px;
     }
   }
 }
