--- a/src/style/note.scss
+++ b/src/style/note.scss
@@ -5,6 +5,8 @@
   .note-header {
     width: 100%;
     height: 40px;
+    position: fixed;
+    top: 0;
     background-color: #db4c3f;
     .header-title {
       width: 50%;
@@ -23,6 +25,7 @@
     overflow: auto;
     padding: 0 30px;
     margin: 0px auto;
+    padding-top: 60px;
     box-sizing:border-box;
     .note-content {
       .note-action {
@@ -38,6 +41,7 @@
         }
         .active {
           border: 1px solid rgba(175, 47, 47, 0.2);
+          border-radius: 2px;
         }
       }
     }
@@ -53,11 +57,13 @@
         outline: 0;
         padding: 0 10px;
         border: 1px solid #ccc;
+        border-radius: 2px 0 0 2px;
       }
       .note-add-btn {
         width: 100px;
         border: 1px solid #ccc;
         border-left: 0;
+        border-radius: 0 2px 2px 0;
       }
     }
     .note-content {
@@ -66,6 +72,9 @@
       }
     }
     .notes {
+      height: 100%;
+      flex: 1;
+      overflow: scroll;
       background-color: #fff;
       .no-note-tip {
         padding:10px 0 10px 10px;
