--- a/src/style/note.scss
+++ b/src/style/note.scss
@@ -136,6 +136,13 @@
           }
           .todo-view  {
             min-height: 49px;
+            .note-time {
+              color: #CCCCCC;
+              position: absolute;
+              top: calc(50% - 5px);
+              font-size: 10px;
+              right: 50px;;
+            }
           }
           label {
             white-space: pre-line;
