update: change nam

--- a/src/style/note.scss
+++ b/src/style/note.scss
@@ -79,7 +79,7 @@
         border-bottom: 1px solid #ededed;
         color:#777;
       }
-      .note-list {
+      .note-nav {
         margin: 0;
         padding: 0;
         list-style: none;
